reset login exception json return

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/recite?useUnicode=true&characterEncoding=UTF8&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
+
+
+account.username=admin
+account.password=123456
