--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,17 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/recite?useUnicode=true&characterEncoding=UTF8&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
-
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.max-active=20
+spring.datasource.max-idle=8
+spring.datasource.min-idle=8
+spring.datasource.initial-size=10
+spring.jpa.database=MySQL
+spring.jpa.show-sql=true
+spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
 
 account.username=admin
 account.password=123456
