--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/recite?useUnicode=true&characterEncoding=UTF8&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=Swt@6542
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.max-active=20
 spring.datasource.max-idle=8
